--- a/hover_effect_4.css
+++ b/hover_effect_4.css
@@ -1,3 +1,6 @@
+鼠标悬停在img上方，图片膨胀，文字浮现在蒙版上*/
+/*具体用法参见文末的Html文件*/
+
 h1{
     padding: 0px;
     margin: 0px;
@@ -76,3 +79,52 @@ h1{
     text-align: center;
     top:100px;
 }
+
+/*hover_effect特效插件的使用，参见下列代码*/
+
+/*<body>
+<div class="container-a4">
+    <ul class="caption-style-4">
+        <li>
+            <img src="img/chaps_1x.jpg" alt="">
+            <div class="caption">
+                <div class="blur"></div>
+                <div class="caption-text">
+                    <h1>Amazing Caption</h1>
+                    <p>Whatever It Is - Always Awesome</p>
+                </div>
+            </div>
+        </li>
+        <li>
+            <img src="img/m.jpg" alt="">
+            <div class="caption">
+                <div class="blur"></div>
+                <div class="caption-text">
+                    <h1>Amazing Caption</h1>
+                    <p>Whatever It Is - Always Awesome</p>
+                </div>
+            </div>
+        </li>
+        <li>
+            <img src="img/raspberry.jpg" alt="">
+            <div class="caption">
+                <div class="blur"></div>
+                <div class="caption-text">
+                    <h1>Amazing Caption</h1>
+                    <p>Whatever It Is - Always Awesome</p>
+                </div>
+            </div>
+        </li>
+        <li>
+            <img src="img/sketch_1x.jpg" alt="">
+            <div class="caption">
+                <div class="blur"></div>
+                <div class="caption-text">
+                    <h1>Amazing Caption</h1>
+                    <p>Whatever It Is - Always Awesome</p>
+                </div>
+            </div>
+        </li>
+    </ul>
+</div>
+</body>
